[tool.poetry]
name = "data-structures-and-algorithms-in-python"
version = "0.1.0"
description = ""
authors = ["Hank Ehly <henry.ehly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
