[tool.poetry]
name = "data-structures-and-algorithms-in-python"
version = "0.1.0"
description = ""
authors = ["Hank Ehly <henry.ehly@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
black = "^20.8b1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.black]
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
